[gd_scene load_steps=10 format=3 uid="uid://cwfpgac030ih8"]

[ext_resource type="PackedScene" uid="uid://ch181menffixb" path="res://src/scenes/common/spawns.tscn" id="1_jmnqx"]
[ext_resource type="Script" path="res://src/scenes/main/main.gd" id="1_rghyt"]
[ext_resource type="PackedScene" uid="uid://bsnba6hta51h0" path="res://src/scenes/common/walls.tscn" id="3_fteon"]
[ext_resource type="FontFile" uid="uid://07jtmouf4f6t" path="res://res/fonts/catfiles/Catfiles.ttf" id="3_pt3n8"]
[ext_resource type="PackedScene" uid="uid://c8xjcapx2p5f1" path="res://src/entities/player/player.tscn" id="4_6wyxp"]
[ext_resource type="PackedScene" uid="uid://0utvwb37nd5r" path="res://src/scenes/common/mouse.tscn" id="6_70qxm"]
[ext_resource type="PackedScene" uid="uid://baupbxu3s818h" path="res://src/entities/sardine/sardine_sprite.tscn" id="7_58wfg"]
[ext_resource type="PackedScene" uid="uid://d1t3dowrd6qgl" path="res://src/scenes/common/button.tscn" id="8_xsmlv"]
[ext_resource type="Material" uid="uid://bfc34sndr1832" path="res://res/materials/shake/shake_material.tres" id="9_nef77"]

[node name="Main" type="Node2D"]
script = ExtResource("1_rghyt")

[node name="Spawns" parent="." instance=ExtResource("1_jmnqx")]

[node name="Walls" parent="." instance=ExtResource("3_fteon")]

[node name="Title" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 50.0
offset_right = 800.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("3_pt3n8")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center][wave]A day in the life of a [color=ee8f57]fish[/color][wave][center]"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Player" parent="." instance=ExtResource("4_6wyxp")]
position = Vector2(-50, 400)

[node name="UI" type="Node2D" parent="."]

[node name="Move" type="RichTextLabel" parent="UI"]
clip_contents = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 140.0
offset_top = 720.0
offset_right = 240.0
offset_bottom = 760.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("3_pt3n8")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center][wave]move[wave][center]"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Mouse" parent="UI/Move" instance=ExtResource("6_70qxm")]
position = Vector2(-24, 17)
scale = Vector2(0.8, 0.8)

[node name="Eat" type="RichTextLabel" parent="UI"]
clip_contents = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 376.0
offset_top = 720.0
offset_right = 476.0
offset_bottom = 760.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("3_pt3n8")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center][wave]eat[wave][center]"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Sprite" parent="UI/Eat" instance=ExtResource("7_58wfg")]
position = Vector2(-18, 18)
scale = Vector2(1.3, 1.3)

[node name="Shoot" type="RichTextLabel" parent="UI"]
clip_contents = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 602.0
offset_top = 720.0
offset_right = 722.0
offset_bottom = 760.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("3_pt3n8")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center][wave]shoot[wave][center]"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Mouse" parent="UI/Shoot" instance=ExtResource("6_70qxm")]
position = Vector2(-24, 17)
scale = Vector2(0.8, 0.8)
mouse_side = 1

[node name="Start" parent="UI" instance=ExtResource("8_xsmlv")]
position = Vector2(228, 672)
text = "Start"

[node name="Credits" parent="UI" instance=ExtResource("8_xsmlv")]
position = Vector2(571, 672)

[node name="Sound" parent="UI" instance=ExtResource("8_xsmlv")]
position = Vector2(406, 673)
scale = Vector2(0.5, 0.5)
text = "     on"

[node name="Polygon2D2" type="Polygon2D" parent="UI/Sound"]
position = Vector2(-6, 0)
color = Color(0.137255, 0.137255, 0.137255, 1)
polygon = PackedVector2Array(-36, -12, -36, 8, -40, 8, -42, 10, -42, 14, -38, 16, -32, 12, -32, -6, -20, -8, -20, 4, -24, 4, -26, 6, -26, 10, -22, 12, -16, 8, -16, -16)

[node name="Credits" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="Credits" type="Node2D" parent="Credits"]

[node name="Polygon2D" type="Polygon2D" parent="Credits/Credits"]
material = ExtResource("9_nef77")
position = Vector2(-1, -11)
color = Color(0.137255, 0.137255, 0.137255, 1)
polygon = PackedVector2Array(18, 129, 77.0916, 128.766, 179.866, 128.36, 258.24, 128.05, 354.662, 127.669, 444.707, 127.313, 538.998, 126.941, 622.694, 126.61, 689.439, 126.346, 746.658, 126.12, 777, 126, 777.545, 181.748, 778.448, 274.026, 779.308, 361.891, 780.002, 432.868, 780.77, 511.271, 781.527, 588.636, 782, 637, 724.412, 637.448, 627.999, 638.198, 513.575, 639.089, 417.162, 639.839, 333.486, 640.49, 213.79, 641.422, 119.528, 642.155, 55.9149, 642.65, 11, 643, 11.5519, 602.471, 12.3459, 544.169, 13.2403, 478.494, 14.25, 404.36, 15.5919, 305.819, 16.9335, 207.307)

[node name="CloseCredits" parent="Credits/Credits" instance=ExtResource("8_xsmlv")]
position = Vector2(392, 582)
text = "Close"

[node name="RichTextLabel" type="RichTextLabel" parent="Credits/Credits"]
offset_left = 81.0
offset_top = 173.0
offset_right = 715.0
offset_bottom = 518.0
bbcode_enabled = true
text = "[wave][center]
Game for the [color=ee8f57][b]Fish Fest Jam[/b][/color]

Code, Art, and Sfx
by [url={\"url\": \"https://tomeyro.itch.io\"}]Tomeyro[/url]

Music
by [url={\"url\": \"https://gatozerogames.itch.io\"}]Gato Zero[/url]

Free font \"Catfiles\"
by [url={\"url\":\"https://www.behance.net/khurasan\"}]Khurasan[/url]
[/center][/wave]"

[connection signal="clicked" from="UI/Start" to="." method="_on_start_clicked"]
[connection signal="clicked" from="UI/Credits" to="." method="_on_credits_clicked"]
[connection signal="clicked" from="UI/Sound" to="." method="_on_sound_clicked"]
[connection signal="clicked" from="Credits/Credits/CloseCredits" to="." method="_on_close_credits_clicked"]
[connection signal="meta_clicked" from="Credits/Credits/RichTextLabel" to="." method="_on_credits_label_meta_clicked"]
